--- a/body-matter/1r/algebra-lineal.tex
+++ b/body-matter/1r/algebra-lineal.tex
@@ -14,7 +14,8 @@
 	\begin{definition}[Matriu]
 		\labelname{matriu}\label{def:matriu}
 		\labelname{matriu quadrada}\label{def:matriu quadrada}
-		Siguin \(m\) i \(n\) dos enters i \(\{a_{i,j}\}^{1\leq i\leq m}_{1\leq j\leq n}\) elements d'un cos \(\mathbb{K}\). Aleshores direm que
+		Siguin \(m\) i \(n\) dos enters i \(\{a_{i,j}\}^{1\leq i\leq m}_{1\leq j\leq n}\) elements d'un cos \(\mathbb{K}\).
+		Aleshores direm que
 		\[[a_{i,j}]=
 		\left[\begin{matrix}
 		a_{1,1} & a_{1,2} & \cdots & a_{1,n} \\
@@ -24,7 +25,8 @@
 		\end{matrix}\right]\]
 		és una matriu de mida \(m\times n\) sobre \(\mathbb{K}\).
 		
-		Direm que \(a_{i,j}\) és el component \((i,j)\) de la matriu \([a_{i,j}]\). Si \(A=[a_{i,j}]\) també denotarem \([A]_{i,j}=a_{i,j}\).
+		Direm que \(a_{i,j}\) és el component \((i,j)\) de la matriu \([a_{i,j}]\).
+		Si \(A=[a_{i,j}]\) també denotarem \([A]_{i,j}=a_{i,j}\).
 		
 		Si \(n=m\) direm que \((a_{i,j})\) és una matriu quadrada d'ordre \(n\).
 	\end{definition}
@@ -34,7 +36,8 @@
 		\[
 		    X=\{A\mid A\text{ és una matriu de mida }m\times n\text{ sobre }\mathbb{K}\}
 		\]
-		un conjunt. Aleshores denotarem \(X=\matrius_{m\times n}(\mathbb{K})\).
+		un conjunt.
+		Aleshores denotarem \(X=\matrius_{m\times n}(\mathbb{K})\).
 		
 		Si \(n=m\) denotarem \(X=\matrius_{n}(\mathbb{K})\).
 	\end{notation}
@@ -42,14 +45,16 @@
 	%Quan veiem que el producte té sentit veure que pertany a \(\matrius_{m\times n}(\mathbb{K})\).
 	\begin{definition}[Suma de matrius]
 		\labelname{suma de matrius}\label{def:suma de matrius}
-		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores definim la seva suma com una operació \(+\) que satisfà
+		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores definim la seva suma com una operació \(+\) que satisfà
 		\[
 		    [A+B]_{i,j}=[A]_{i,j}+[B]_{i,j}.
 		\]
 	\end{definition}
 	\begin{definition}[Producte de matrius]
 		\labelname{producte de matrius}\label{def:producte de matrius}
-		Siguin \(A\) una matriu de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\) una matriu de mida \(l\times n\) sobre un cos \(\mathbb{K}\). Aleshores definim el seu producte com una operació \(\cdot\) que satisfà
+		Siguin \(A\) una matriu de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\) una matriu de mida \(l\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores definim el seu producte com una operació \(\cdot\) que satisfà
 		\[
 		    [A\cdot B]_{i,j}=\sum_{k=1}^{l}[A]_{i,k}[B]_{k,j}.
 		\]
@@ -59,7 +64,8 @@
 	\subsection{Propietats de les operacions amb matrius}
 	\begin{proposition}
 		\label{prop:associativitat suma matrius}
-		Siguin \(A\), \(B\) i \(C\) tres matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Siguin \(A\), \(B\) i \(C\) tres matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (A+B)+C=A+(B+C).
 		\]
@@ -76,7 +82,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:commutativitat suma matrius}
-		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    A+B=B+A.
 		\]
@@ -98,11 +105,13 @@
 		0 & \cdots & 0
 		\end{matrix}\right]
 		\in\matrius_{m\times n}(\mathbb{K})\]
-		com \(0_{m\times n}\), ó \(0\) si és clar pel context. També escriurem \(0_{n\times n}=0_{n}\).
+		com \(0_{m\times n}\), ó \(0\) si és clar pel context.
+		També escriurem \(0_{n\times n}=0_{n}\).
 	\end{notation}
 	\begin{proposition}
 		\label{prop:element neutre per la suma de matrius}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    A+0=A.
 		\]
@@ -118,7 +127,8 @@
 	\end{proposition}
 	\begin{definition}[Producte d'una matriu per escalars]
 		\labelname{producte d'una matriu per escalars}\label{def:producte d'una matriu per escalars}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(\alpha\) un escalar de \(\mathbb{K}\). Aleshores definim
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(\alpha\) un escalar de \(\mathbb{K}\).
+		Aleshores definim
 		\[
 		    [\alpha A]_{i,j}=\alpha[A]_{i,j}.
 		\]
@@ -127,7 +137,8 @@
 	\end{definition}
 	\begin{proposition}
 		\label{prop:inverses per la suma de matrius}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    A-A=0.
 		\]
@@ -143,7 +154,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:associativitat mixta producte escalars per matrius}
-		Siguin \(A\) una matriu de mida \(m\times n\) i \(\alpha\) i \(\beta\) dos escalars de \(\mathbb{K}\). Aleshores
+		Siguin \(A\) una matriu de mida \(m\times n\) i \(\alpha\) i \(\beta\) dos escalars de \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (\alpha\beta)A=\alpha(\beta A).
 		\]
@@ -158,7 +170,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:distributiva respecta la suma d'escalars del producte de matrius}
-		Siguin \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(\alpha\) i \(\beta\) dos escalars de \(\mathbb{K}\). Aleshores
+		Siguin \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(\alpha\) i \(\beta\) dos escalars de \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (\alpha+\beta)A=\alpha A+\beta A.
 		\]
@@ -173,7 +186,8 @@
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    1A=A.
 		\]
@@ -191,7 +205,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:associativitat producte de matrius}
-		Siguin \(\mathbb{K}\) un cos i \(A\) una matriu de mida \(m\times l\) sobre \(\mathbb{K}\), \(B\) una matriu de mida \(l\times s\) sobre \(\mathbb{K}\) i \(C\) una matriu de mida \(s\times m\) sobre \(\mathbb{K}\). Aleshores
+		Siguin \(\mathbb{K}\) un cos i \(A\) una matriu de mida \(m\times l\) sobre \(\mathbb{K}\), \(B\) una matriu de mida \(l\times s\) sobre \(\mathbb{K}\) i \(C\) una matriu de mida \(s\times m\) sobre \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (AB)C=A(BC).
 		\]
@@ -211,7 +226,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:distributiva del producte de matrius respecte la suma}
-		Siguin \(A\) i \(A'\) dues matrius de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\), \(B'\) dues matrius de mida \(l\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Siguin \(A\) i \(A'\) dues matrius de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\), \(B'\) dues matrius de mida \(l\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (A+A')B=AB+A'B
 		\]
@@ -258,7 +274,8 @@
 	\end{notation}
 	\begin{proposition}
 		\label{prop:producte per la matriu identitat}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    I_{m}A=A=AI_{n}.
 		\]
@@ -304,7 +321,8 @@
 		\[
 		    AA'=A'A=I_{n}.
 		\]
-		Aleshores direm que \(A\) és una matriu invertible i que \(A'\) és la inversa de \(A\). També denotarem \(A'=A^{-1}\).
+		Aleshores direm que \(A\) és una matriu invertible i que \(A'\) és la inversa de \(A\).
+		També denotarem \(A'=A^{-1}\).
 		
 		Observem que aquesta definició té sentit per la proposició \myref{prop:unicitat inverses de matrius pel producte}.
 	\end{definition}
@@ -319,7 +337,8 @@
 	\end{observation}
 	\begin{proposition}
 		\label{prop:el producte de matrius invertibles és invertible}
-		Siguin \(A\) i \(B\) dues matrius invertibles d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores la matriu \(AB\) és invertible.
+		Siguin \(A\) i \(B\) dues matrius invertibles d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores la matriu \(AB\) és invertible.
 		\begin{proof}
 			Per la proposició \myref{prop:associativitat producte de matrius} i la definició de \myref{def:matriu invertible} tenim que
 			\[
@@ -330,7 +349,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:inversa del producte de matrius}
-		Siguin \(A\) i \(B\) dues matrius invertibles d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Siguin \(A\) i \(B\) dues matrius invertibles d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (AB)^{-1}=B^{-1}A^{-1}.
 		\]
@@ -350,7 +370,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:inversa de la inversa d'una matriu és la matriu}
-		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (A^{-1})^{-1}=A.
 		\]
@@ -372,13 +393,15 @@
 	\begin{definition}[Matriu transposada]
 		\labelname{matriu transposada}\label{def:matriu transposada}
 		\labelname{transposició d'una matriu}\label{def:transposició d'una matriu}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Definim la transposada de \(A\) com una matriu \(A^{t}\) de mida \(n\times m\) sobre \(\mathbb{K}\) que satisfà
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Definim la transposada de \(A\) com una matriu \(A^{t}\) de mida \(n\times m\) sobre \(\mathbb{K}\) que satisfà
 		\[
 		    [A^{t}]_{i,j}=[A]_{j,i}.
 		\]
 	\end{definition}
 	\begin{proposition}
-		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores
+		Siguin \(A\) i \(B\) dues matrius de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (A+B)^{t}=A^{t}+B^{t}.
 		\]
@@ -395,7 +418,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:producte de matrius transposades}
-		Siguin \(A\) una matriu de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\) una matriu de mida \(l\times n\) sobre \(\mathbb{K}\). Aleshores
+		Siguin \(A\) una matriu de mida \(m\times l\) sobre un cos \(\mathbb{K}\) i \(B\) una matriu de mida \(l\times n\) sobre \(\mathbb{K}\).
+		Aleshores
 		\[
 		    (AB)^{t}=B^{t}A^{t}.
 		\]
@@ -413,7 +437,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:transposada d'una invertible és invertible}
-		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores la matriu \(A^{t}\) és invertible i \(\left(A^{t}\right)^{-1}=\left(A^{-1}\right)^{t}\).
+		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores la matriu \(A^{t}\) és invertible i \(\left(A^{t}\right)^{-1}=\left(A^{-1}\right)^{t}\).
 		\begin{proof}
 			Per la proposició \myref{prop:producte de matrius transposades} tenim que
 			\[
@@ -424,13 +449,15 @@
 	\end{proposition}
 	\begin{definition}[Matriu simètrica]
 		\labelname{matriu simètrica}\label{def:matriu simètrica}
-		Sigui \(A\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\) tal que \(A^{t}=A\). Aleshores direm que \(A\) és una matriu simètrica.
+		Sigui \(A\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\) tal que \(A^{t}=A\).
+		Aleshores direm que \(A\) és una matriu simètrica.
 	\end{definition}
 	\subsection{Producte de matrius en blocs}%FER producte de matrius en blocs
 	\begin{definition}[Files i columnes]
 		\labelname{fila d'una matriu}\label{def:fila d'una matriu}
 		\labelname{columna d'una matriu}\label{def:columna d'una matriu}
-		Sigui \(A=(a_{i,j})\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores definim
+		Sigui \(A=(a_{i,j})\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores definim
 		\[F_{i}=\left[\begin{matrix}
 		a_{i,1} & \cdots & a_{i,n}
 		\end{matrix}\right]\]
@@ -447,7 +474,8 @@
 		Si \(A\in\matrius_{m\times n}(\mathbb{K})\) tenim \(F_{i}\in\matrius_{1\times n}(\mathbb{K})\) i \(C_{i}\in\matrius_{m\times 1}(\mathbb{K})\).
 	\end{observation}
 	\begin{notation}
-		Si \(A\) és una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\), \(F_{1},\dots,F_{m}\) les files de \(A\) i \(C_{1},\dots,C_{n}\) les columnes de \(A\). Aleshores denotem
+		Si \(A\) és una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\), \(F_{1},\dots,F_{m}\) les files de \(A\) i \(C_{1},\dots,C_{n}\) les columnes de \(A\).
+		Aleshores denotem
 		\[A=\left[\begin{matrix}
 		F_{1} \\
 		\vdots \\
@@ -463,7 +491,8 @@
 		\vdots & & \vdots \\
 		a_{m_{i},n_{i-1}} & \cdots & a_{m_{i},n_{i}}
 		\end{matrix}\right]\]
-		matrius sobre un cos \(\mathbb{K}\). Aleshores denotem
+		matrius sobre un cos \(\mathbb{K}\).
+		Aleshores denotem
 		\[A=\left[\begin{matrix}
 		A_{1,1} & \cdots & A_{1,q} \\
 		\vdots & & \vdots \\
@@ -495,7 +524,8 @@
 			    [AB]_{i,j}=\sum_{k=1}^{l}[A]_{i,k}[B]_{k,j}.
 			\]
 			
-			També tenim que \(i=m_{1}+\dots+m_{k_{i}}+i'\) i \(j=n_{1}+\dots+n_{k_{j}}+j'\) per a certs \(k_{i}\in\{1,\dots,p-1\}\), \(k_{j}\in\{1,\dots,r-1\}\), \(i'\leq m_{k_{i}+1}-m_{k_{i}}\) i \(j'\leq n_{k_{j}+1}-n_{k_{j}}\). Per tant hem de veure que
+			També tenim que \(i=m_{1}+\dots+m_{k_{i}}+i'\) i \(j=n_{1}+\dots+n_{k_{j}}+j'\) per a certs \(k_{i}\in\{1,\dots,p-1\}\), \(k_{j}\in\{1,\dots,r-1\}\), \(i'\leq m_{k_{i}+1}-m_{k_{i}}\) i \(j'\leq n_{k_{j}+1}-n_{k_{j}}\).
+			Per tant hem de veure que
 			\[
 			    \sum_{k=1}^{l}[A]_{i,k}[B]_{k,j}=\left[\sum_{k=1}^{q}A_{m_{k_{i}},k}B_{k,n_{k_{j}}}\right]_{i',j'}.
 			\]
@@ -530,7 +560,8 @@
 	\subsection{Transformacions elementals}
 	\begin{definition}[Transformacions elementals] %REFER per columnes i files
 		\labelname{transformacions elementals}\label{def:transformacions elementals}
-		Siguin \(A=(a_{i,j})\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(i\) i \(j\) dos naturals diferents amb \(i,j\leq m\) i \(\lambda\) un element no nul de \(\mathbb{K}\). Aleshores definim les funcions
+		Siguin \(A=(a_{i,j})\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\) i \(i\) i \(j\) dos naturals diferents amb \(i,j\leq m\) i \(\lambda\) un element no nul de \(\mathbb{K}\).
+		Aleshores definim les funcions
 		\[P_{i,j}(A)=\left[\begin{matrix}
 		a_{1,1} & \cdots & a_{1,n} \\
 		\vdots & & \vdots \\
@@ -601,7 +632,8 @@
 %	\end{observation}
 	\begin{proposition}
 		\label{prop:transformacions elementals i matrius elementals}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores per a tota successió de transformacions elementals per files \(f\) existeix una matriu \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) tal que \(f(A)=PA\) i per a tota successió de transformacions elementals per columnes \(g\) existeix una matriu \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tal que \(g(A)=AQ\).
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores per a tota successió de transformacions elementals per files \(f\) existeix una matriu \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) tal que \(f(A)=PA\) i per a tota successió de transformacions elementals per columnes \(g\) existeix una matriu \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tal que \(g(A)=AQ\).
 %		Siguin \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\), \(f\) una transformació elemental per files i \(g\) una transformació elemental per columnes.
 %		
 %		Aleshores existeix una matriu \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) tal que \(f(A)=PA\) i existeix una matriu \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tal que \(g(A)=AQ\).
@@ -611,13 +643,15 @@
 	\end{proposition}
 	\begin{definition}[Matriu elemental]
 		\labelname{matriu elemental}\label{def:matriu elemental}
-		Sigui \(P\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\) tal que existeixi una sèrie de transformacions elementals tals que per a tota matriu \(A\) de mida \(m\times n\) sobre \(\mathbb{K}\) tenim \(f(A)=PA\). Aleshores direm que \(P\) és una matriu elemental.
+		Sigui \(P\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\) tal que existeixi una sèrie de transformacions elementals tals que per a tota matriu \(A\) de mida \(m\times n\) sobre \(\mathbb{K}\) tenim \(f(A)=PA\).
+		Aleshores direm que \(P\) és una matriu elemental.
 		
 		Aquesta definició té sentit per la proposició \myref{prop:transformacions elementals i matrius elementals}.
 	\end{definition}
 	\begin{observation}
 		\label{obs:producte de matrius elementals és matriu elemental}
-		Siguin \(P\) i \(Q\) dues matrius elementals d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores \(PQ\) és una matriu elemental.
+		Siguin \(P\) i \(Q\) dues matrius elementals d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(PQ\) és una matriu elemental.
 	\end{observation}
 	\begin{notation}
 		Denotarem les transformacions elementals per files \(P_{i,j}\) com \(F_{i}\leftrightarrow F_{j}\), \(D_{i,\lambda}\) com \(F_{i}\rightarrow\lambda F_{i}\) i \(E_{i,j,\lambda}\) com \(F_{i}\rightarrow F_{i}+\lambda F_{j}\).
@@ -628,9 +662,11 @@
 	\end{notation}
 	\begin{proposition}
 		\label{prop:les matrius elementals són invertibles}
-		Sigui \(P\) una matriu elemental d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores \(P\) és una matriu invertible.
+		Sigui \(P\) una matriu elemental d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(P\) és una matriu invertible.
 		\begin{proof}
-			En tenim prou amb veure que \(P_{i,j}^{-1}=P_{i,j}\), \(D_{i,\lambda}^{-1}=D_{i,\lambda^{-1}}\) i \(E_{i,j,\lambda}^{-1}=E_{i,j,-\lambda}\). Per tant, per la definició de \myref{def:matriu elemental} i la definició de \myref{def:matriu invertible} tenim que \(P\) és una matriu invertible.
+			En tenim prou amb veure que \(P_{i,j}^{-1}=P_{i,j}\), \(D_{i,\lambda}^{-1}=D_{i,\lambda^{-1}}\) i \(E_{i,j,\lambda}^{-1}=E_{i,j,-\lambda}\).
+			Per tant, per la definició de \myref{def:matriu elemental} i la definició de \myref{def:matriu invertible} tenim que \(P\) és una matriu invertible.
 		\end{proof}
 	\end{proposition}
 	\subsection{Matrius esglaonades i mètode de Gauss}
@@ -644,11 +680,16 @@
 	\end{definition}
 	\begin{proposition}
 		\label{prop:es pot esglaonar qualsevol matriu per files}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores \(A\) es pot esglaonar per files.
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(A\) es pot esglaonar per files.
 		\begin{proof} %REFER a partir de l'hipotesi d'inducció
-			Denotem \(A=(a_{i,j})\). Ho farem per inducció sobre \(n\).
+			Denotem \(A=(a_{i,j})\).
+			Ho farem per inducció sobre \(n\).
 			
-			Suposem que \(n=1\). Si \(a_{i,1}=0\) per a tot \(i\in\{1,\dots,m\}\) per la definició de \myref{def:matriu esglaonada} hem acabat. Suposem doncs que existeix un \(i\in\{1,\dots,m\}\) tal que \(a_{i,1}\neq0\). Aleshores podem fer les transformacions elementals
+			Suposem que \(n=1\).
+			Si \(a_{i,1}=0\) per a tot \(i\in\{1,\dots,m\}\) per la definició de \myref{def:matriu esglaonada} hem acabat.
+			Suposem doncs que existeix un \(i\in\{1,\dots,m\}\) tal que \(a_{i,1}\neq0\).
+			Aleshores podem fer les transformacions elementals
 			\[A=
 			\left[\begin{matrix}
 			a_{i,1}\\
@@ -681,19 +722,25 @@
 			\end{matrix}\right]\]
 			i per la definició de \myref{def:matriu esglaonada} hem acabat.
 			
-			Suposem doncs que la hipòtesi és certa per a \(n\). Veiem que també ho és per \(n+1\). Sigui \(A=(a_{i,j})\) una matriu de mida \(m\times(n+1)\) sobre \(\mathbb{K}\). Considerem la matriu
+			Suposem doncs que la hipòtesi és certa per a \(n\).
+			Veiem que també ho és per \(n+1\).
+			Sigui \(A=(a_{i,j})\) una matriu de mida \(m\times(n+1)\) sobre \(\mathbb{K}\).
+			Considerem la matriu
 			\[A'=\left[\begin{matrix}
 			a_{1,2} & \dots & a_{1,n+1} \\
 			\vdots & & \vdots \\
 			a_{m,2} & \dots & a_{m,n+1}
 			\end{matrix}\right].\]
-			Per la definició de \myref{def:matriu} tenim que \(A'\) és una matriu de mida \(m\times n\) sobre \(\mathbb{K}\), i per l'hipòtesi d'inducció tenim que podem esglaonar-la. Sigui doncs \(B\) la matriu \(A'\) esglaonada. Considerem la matriu
+			Per la definició de \myref{def:matriu} tenim que \(A'\) és una matriu de mida \(m\times n\) sobre \(\mathbb{K}\), i per l'hipòtesi d'inducció tenim que podem esglaonar-la.
+			Sigui doncs \(B\) la matriu \(A'\) esglaonada.
+			Considerem la matriu
 			\[\left[\begin{matrix}
 			a_{1,1}\\
 			\vdots\\
 			a_{1,m}\\
 			\end{matrix}\right],\]
-			que correspon a la primera columna de la matriu \(A\). Hem vist que podem esglaonar-la, i per tant per la definició de \myref{def:matriu esglaonada} tenim que podem esglaonar la matriu \(A\), ja que
+			que correspon a la primera columna de la matriu \(A\).
+			Hem vist que podem esglaonar-la, i per tant per la definició de \myref{def:matriu esglaonada} tenim que podem esglaonar la matriu \(A\), ja que
 			\[A=\left[\begin{array}{c|c}
 			a_{1,1} & \\
 			\vdots & A' \\
@@ -704,20 +751,26 @@
 	\end{proposition}
 	\begin{corollary}
 		\label{corollary:es pot esglaonar qualsevol matriu per columnes}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores \(A\) es pot esglaonar per columnes.
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(A\) es pot esglaonar per columnes.
 	\end{corollary}
 	\subsection{Reducció d'una matriu}
 	\begin{theorem}[Teorema de la \(PAQ\)-reducció]
 		\labelname{Teorema de la \ensuremath{PAQ}-reducció}\label{thm:Teorema de la PAQ-reducció}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores existeixen un únic nombre natural \(r\) satisfent \(r\leq\min(m,n)\), una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores existeixen un únic nombre natural \(r\) satisfent \(r\leq\min(m,n)\), una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
 		\[PAQ=\left[\begin{array}{c|c}
 		I_{r} & 0\\\hline
 		0 & 0
 		\end{array}\right].\]
 		\begin{proof}
-			Denotem \(A=(a_{i,j})\). Si \(a_{i,j}=0\) per a tot \(i\in\{1,\dots,m\}\) i \(j\in\{1,\dots,n\}\) aleshores tenim \(r=0\) i hem acabat. Suposem doncs que existeixen \(i\in\{1,\dots,m\}\) i \(j\in\{1,\dots,n\}\) tals que \(a_{i,j}\neq0\).
+			Denotem \(A=(a_{i,j})\).
+			Si \(a_{i,j}=0\) per a tot \(i\in\{1,\dots,m\}\) i \(j\in\{1,\dots,n\}\) aleshores tenim \(r=0\) i hem acabat.
+			Suposem doncs que existeixen \(i\in\{1,\dots,m\}\) i \(j\in\{1,\dots,n\}\) tals que \(a_{i,j}\neq0\).
 			
-			Per la proposició \myref{prop:es pot esglaonar qualsevol matriu per files} tenim que existeix una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) tal que \(PA\) està esglaonada per files. Per la definició de \myref{def:matriu esglaonada} tenim que existeixen \(j_{i}\) per a tot \(i\in\{1,\dots,r\}\) amb \(j_{1}<\dots<j_{r}\) tals que per a tot \(j<j_{i}\) tenim \(a_{i,j}=0\) i \(a_{i,j_{i}}=1\). Fent les transformacions elementals
+			Per la proposició \myref{prop:es pot esglaonar qualsevol matriu per files} tenim que existeix una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) tal que \(PA\) està esglaonada per files.
+			Per la definició de \myref{def:matriu esglaonada} tenim que existeixen \(j_{i}\) per a tot \(i\in\{1,\dots,r\}\) amb \(j_{1}<\dots<j_{r}\) tals que per a tot \(j<j_{i}\) tenim \(a_{i,j}=0\) i \(a_{i,j_{i}}=1\).
+			Fent les transformacions elementals
 			\[
 			    C_{1}\leftrightarrow C_{j_{1}},\quad C_{2}\leftrightarrow C_{j_{2}},\dots,C_{r}\leftrightarrow C_{j_{r}}
 			\]
@@ -743,14 +796,17 @@
 			I_{r} & 0\\\hline
 			0 & 0
 			\end{array}\right],\]
-			i per la definició de \myref{prop:transformacions elementals i matrius elementals} tenim que les matrius \(P\) i \(Q\) són matrius elementals. %FER %TODO ?
+			i per la definició de \myref{prop:transformacions elementals i matrius elementals} tenim que les matrius \(P\) i \(Q\) són matrius elementals.
+			%FER %TODO ?
 			
-			Veiem ara que \(r\) és únic. Suposem que existeixen un nombre natural \(s\leq\min(m,n)\), una matriu elemental \(P_{1}\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q_{1}\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
+			Veiem ara que \(r\) és únic.
+			Suposem que existeixen un nombre natural \(s\leq\min(m,n)\), una matriu elemental \(P_{1}\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q_{1}\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
 			\[P_{1}AQ_{1}=\left[\begin{array}{c|c}
 			I_{s} & 0\\\hline
 			0 & 0
 			\end{array}\right].\]
-			Hem de veure que \(r=s\). Suposem que \(r\leq s\).
+			Hem de veure que \(r=s\).
+			Suposem que \(r\leq s\).
 			
 			Tenim que
 			\[PAQ=\left[\begin{array}{c|c}
@@ -881,7 +937,9 @@
 			Q''_{2}Q_{3} & Q'''_{2}
 			\end{array}\right]=B.
 			\end{multline*}
-			Per la proposició \myref{prop:el producte de matrius invertibles és invertible} trobem que la matriu \(B\) és invertible. Ara bé, per l'observació \myref{obs:matrius amb una fila nula no són invertibles} trobem que ha de ser \(r-t=s-t=0\), i per tant \(r=s\), com volíem veure. La demostració del cas \(s\leq r\) és anàloga.
+			Per la proposició \myref{prop:el producte de matrius invertibles és invertible} trobem que la matriu \(B\) és invertible.
+			Ara bé, per l'observació \myref{obs:matrius amb una fila nula no són invertibles} trobem que ha de ser \(r-t=s-t=0\), i per tant \(r=s\), com volíem veure.
+			La demostració del cas \(s\leq r\) és anàloga.
 		\end{proof}
 	\end{theorem}
 	\begin{definition}[Rang]
@@ -897,7 +955,8 @@
 	\end{definition}
 	\begin{proposition}
 		\label{prop:rang de la matriu transposada és el rang de la matriu}
-		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores \(\rang(A)=\rang(A^{t})\).
+		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(\rang(A)=\rang(A^{t})\).
 		\begin{proof}
 			Per la definició de \myref{def:rang d'una matriu} tenim que existeixen una matriu \(P\) invertible d'ordre \(n\) sobre \(\mathbb{K}\) i una matriu \(Q\) invertible d'ordre \(m\) sobre \(\mathbb{K}\) tals que
 			\[PAQ=\left[\begin{array}{c|c}
@@ -915,7 +974,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:una matriu invertible és producte de matrius elementals}
-		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores \(A\) és una matriu elemental.
+		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(A\) és una matriu elemental.
 		\begin{proof}
 			Pel \myref{thm:Teorema de la PAQ-reducció} tenim que existeixen dues matrius invertibles \(P\) i \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
 			\[PAQ=\left[\begin{array}{c|c}
@@ -928,15 +988,18 @@
 			I_{r} & 0\\\hline
 			0 & 0
 			\end{array}\right]\]
-			ha de ser invertible, i per l'observació \myref{obs:matrius amb una fila nula no són invertibles} trobem que ha de ser \(r=n\). Per tant tenim \(PAQ=I_{n}\) i tenim que \(A=P^{-1}Q^{-1}\), i per l'observació \myref{obs:producte de matrius elementals és matriu elemental} tenim que \(A\) és una matriu elemental.
+			ha de ser invertible, i per l'observació \myref{obs:matrius amb una fila nula no són invertibles} trobem que ha de ser \(r=n\).
+			Per tant tenim \(PAQ=I_{n}\) i tenim que \(A=P^{-1}Q^{-1}\), i per l'observació \myref{obs:producte de matrius elementals és matriu elemental} tenim que \(A\) és una matriu elemental.
 		\end{proof}
 	\end{proposition}
 	\begin{corollary}
-		Sigui \(A\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores \(A\) és invertible si i només si \(\rang(A)=n\).
+		Sigui \(A\) una matriu d'ordre \(n\) sobre un cos \(\mathbb{K}\).
+		Aleshores \(A\) és invertible si i només si \(\rang(A)=n\).
 	\end{corollary}
 	\begin{observation}
 		\label{obs:rang d'una matriu és invariant pel producte amb invertibles}
-		Siguin \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\), \(P\) una matriu invertible d'ordre \(m\) sobre \(\mathbb{K}\) i \(Q\) una matriu invertible d'ordre \(n\) sobre \(\mathbb{K}\). Aleshores
+		Siguin \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\), \(P\) una matriu invertible d'ordre \(m\) sobre \(\mathbb{K}\) i \(Q\) una matriu invertible d'ordre \(n\) sobre \(\mathbb{K}\).
+		Aleshores
 		\[
 		    \rang(A)=\rang(PAQ).
 		\]
